Use `rocq pp-mlg` for rocq-runtime files, move `coqpp` back to `coq-core`
Not sure if `chdir %{project_root}` is correct or if it should be
`%{workspace_root}` (this only matters for error messages).

--- a/coqpp/dune
+++ b/coqpp/dune
@@ -7,11 +7,9 @@
  (modules :standard \ coqpp)
  (modules_without_implementation coqpp_ast))
 
-; dune's coq.pp uses this,
-; so if we put it in coq-core we can't use coq.pp for rocq-runtime
 (executable
  (public_name coqpp)
  (empty_module_interface_if_absent)
- (package rocq-runtime)
+ (package coq-core)
  (libraries coqpp)
  (modules coqpp))
