--- a/vernac/dune
+++ b/vernac/dune
@@ -12,4 +12,17 @@
  (old_public_name coq-core.vernac)
  (new_public_name rocq-runtime.vernac))
 
-(coq.pp (modules g_proofs g_vernac g_redexpr))
+(rule
+ (targets g_proofs.ml)
+ (deps (:mlg g_proofs.mlg))
+ (action (chdir %{project_root} (run rocq pp-mlg %{deps}))))
+
+(rule
+ (targets g_vernac.ml)
+ (deps (:mlg g_vernac.mlg))
+ (action (chdir %{project_root} (run rocq pp-mlg %{deps}))))
+
+(rule
+ (targets g_redexpr.ml)
+ (deps (:mlg g_redexpr.mlg))
+ (action (chdir %{project_root} (run rocq pp-mlg %{deps}))))
