--- a/doc/plugin_tutorial/tuto2/src/dune
+++ b/doc/plugin_tutorial/tuto2/src/dune
@@ -3,4 +3,7 @@
  (public_name rocq-runtime.plugins.tutorial.p2)
  (libraries rocq-runtime.plugins.ltac))
 
-(coq.pp (modules g_tuto2))
+(rule
+ (targets g_tuto2.ml)
+ (deps (:mlg g_tuto2.mlg))
+ (action (chdir %{project_root} (run rocq pp-mlg %{deps}))))
