--- a/doc/plugin_tutorial/tuto3/src/dune
+++ b/doc/plugin_tutorial/tuto3/src/dune
@@ -4,4 +4,7 @@
  (flags :standard -warn-error -3)
  (libraries rocq-runtime.plugins.ltac))
 
-(coq.pp (modules g_tuto3))
+(rule
+ (targets g_tuto3.ml)
+ (deps (:mlg g_tuto3.mlg))
+ (action (chdir %{project_root} (run rocq pp-mlg %{deps}))))
