--- a/plugins/extraction/dune
+++ b/plugins/extraction/dune
@@ -8,4 +8,7 @@
  (old_public_name coq-core.plugins.extraction)
  (new_public_name rocq-runtime.plugins.extraction))
 
-(coq.pp (modules g_extraction))
+(rule
+ (targets g_extraction.ml)
+ (deps (:mlg g_extraction.mlg))
+ (action (chdir %{project_root} (run rocq pp-mlg %{deps}))))
