Add `rocq workmgr` subcommand move coqworkmgr back to coq-core

--- a/tools/coqworkmgr/dune
+++ b/tools/coqworkmgr/dune
@@ -1,5 +1,5 @@
 (library
- (name coqworkmgrlib)
+ (name coqworkmgrApi)
  (public_name rocq-runtime.coqworkmgrapi)
  (modules coqworkmgrApi)
  (wrapped false)
@@ -9,9 +9,14 @@
  (old_public_name coq-core.coqworkmgrapi)
  (new_public_name rocq-runtime.coqworkmgrapi))
 
+(library
+ (name rocqworkmgr)
+ (modules rocqworkmgr)
+ (libraries coqworkmgrApi))
+
 (executable
  (name coqworkmgr)
  (public_name coqworkmgr)
- (package rocq-runtime)
+ (package coq-core)
  (modules coqworkmgr)
- (libraries coqworkmgrlib))
+ (libraries rocqworkmgr))
