--- a/stm/dune
+++ b/stm/dune
@@ -5,7 +5,7 @@
  (wrapped false)
  ; until ocaml/dune#4892 fixed
  ; (private_modules dag proofBlockDelimiter tQueue vcs workerPool)
- (libraries sysinit coqworkmgrlib))
+ (libraries sysinit coqworkmgrApi))
 
 (deprecated_library_name
  (old_public_name coq-core.stm)
