remove macos pkgconf workaround
seems to no longer be needed

Co-authored-by: Marcello Seri <mseri@users.noreply.github.com>
(cherry picked from commit d083a3a92a3b0f59479c4809d8a64c52d5571dc2)

--- a/.github/workflows/ci-macos.yml
+++ b/.github/workflows/ci-macos.yml
@@ -14,10 +14,7 @@ jobs:
 
       - name: Install system dependencies
         run: |
-          brew unlink pkg-config
-          brew install gnu-time opam gtksourceview3 adwaita-icon-theme expat libxml2 pkgconf
-          brew unlink pkgconf
-          brew link pkg-config
+          brew install gnu-time opam gtksourceview3 adwaita-icon-theme expat libxml2
 
       - name: Install OCaml dependencies
         run: |
