--- a/topbin/dune
+++ b/topbin/dune
@@ -12,7 +12,7 @@
  (modules rocq)
  (modes exe byte)
  ; we statically link the "small" subcommands instead of having separate binaries
- (libraries rocqshim coqdeplib coqpp coqdoclib rocqwc rocqworkmgr rocqtex))
+ (libraries rocqshim coqdeplib coqpp coqdoclib rocqwc rocqworkmgr rocqtex rocqmakefile))
 
 (install
  (section bin)
