--- a/dev/dune
+++ b/dev/dune
@@ -23,7 +23,7 @@
     dune-dbg.in
     ../checker/coqchk.bc
     ../topbin/coqworker.bc
-    ../topbin/coqnative_bin.bc
+    ../topbin/rocqnative.bc
     ../ide/coqide/rocqide_main.bc
     ../tools/coqdep/coqdep.bc
     ; We require all the OCaml libs to be in place and searchable
