--- a/tools/CoqMakefile.in
+++ b/tools/CoqMakefile.in
@@ -99,14 +99,14 @@ endif
 
 # Coq binaries
 ROCQ     ?= "$(COQBIN)rocq"
-COQC     ?= "$(COQBIN)coqc"
-COQTOP   ?= "$(COQBIN)coqtop"
-COQCHK   ?= "$(COQBIN)coqchk"
-COQNATIVE ?= "$(COQBIN)coqnative"
-COQDEP   ?= "$(COQBIN)coqdep"
-COQDOC   ?= "$(COQBIN)coqdoc"
-COQPP    ?= "$(COQBIN)coqpp"
-COQMKFILE ?= "$(COQBIN)coq_makefile"
+COQC     ?= "$(COQBIN)rocq" c
+COQTOP   ?= "$(COQBIN)rocq" repl
+COQCHK   ?= "$(COQBIN)rocqchk"
+COQNATIVE ?= "$(COQBIN)rocq" native-precompile
+COQDEP   ?= "$(COQBIN)rocq" dep
+COQDOC   ?= "$(COQBIN)rocq" doc
+COQPP    ?= "$(COQBIN)rocq" pp-mlg
+COQMKFILE ?= "$(COQBIN)rocq" makefile
 OCAMLLIBDEP ?= "$(COQBIN)ocamllibdep"
 
 # Timing scripts
@@ -274,7 +274,7 @@ COQDOCFLAGS?=-interpolate -utf8 $(COQDOCEXTRAFLAGS)
 
 COQDOCLIBS?=$(COQLIBS_NOML)
 
-# The version of Coq being run and the version of coq_makefile that
+# The version of Coq being run and the version of rocq makefile that
 # generated this makefile
 # NB --print-version is not in the rocq shim
 COQ_VERSION:=$(shell $(ROCQ) c --print-version | cut -d " " -f 1)
